--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,12 @@ spring:
           starttls:
             enable: true
 server:
+  port: 8081
   servlet:
+    context-path: /store
     session:
       cookie:
         same-site: Lax
+
+
+
