--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   geekupstore-backend:
-    image: vietducc/my-backend:latest
+    image: vietducc/geekstore-backend:latest
     container_name: geekupstore-backend
     ports:
       - "8081:8081"
